install(FILES
    abs-icon-normal.png
    board-current.png
    board-first.png
    board-normal.png
    brake-temp-cold.png
    brake-temp-hot.png
    brake-temp-optimal.png
    dash-items.png
    delta-gaining.png
    delta-losing.png
    delta-normal.png
    DESIGN.png
    driverinfo-container.png
    driverinput-brake.png
    driverinput-clutch.png
    driverinput-container.png
    driverinput-empty.png
    driverinput-throttle.png
    driverinput-wheel.png
    edithud-dragicon.png
    edithud-resizeicon.png
    edithud-selectedwidget.png
    edithud-titlebar.png
    edithud-toggleoff.png
    edithud-toggleon.png
    engine-icon-damaged.png
    engine-icon.png
    fuel-icon-empty.png
    fuel-icon-full.png
    fuel-info-container.png
    g4808.png
    gforces-dot.png
    gforces-graph.png
    hudtest.svg
    lap-container.png
    laptime-container-green.png
    laptime-container-grey.png
    laptime-container.png
    laptime-container-red.png
    laptime-container-violet.png
    led-background.png
    led-green.png
    led-grey.png
    led-purple.png
    led-red.png
    leds.png
    position-container.png
    relative-time-container.png
    rpm-off.png
    rpm-on.png
    "RPM TEST.png"
    tachometer.png
    tachometerv2-on_backup.png
    tachometerv2-on.png
    tachometerv2-onred.png
    tachometerv2.png
    times-container.png
    tire-data-container.png
    tire-normal.png
    tire-slip-indicator.png
    tire-temp-cold.png
    tire-temp-hot.png
    tire-temp-optimal.png
    tire-temp-otimal.png
    tire-temps-background.png
    track-data-background.png
    tractioncontrol-icon-normal.png
    weather-cloudy.png
    weather-overcast.png
    weather-rainy.png
    weather-sunny.png
    DESTINATION ${datadir}/data/img/osg-hud
)
