add_subdirectory(ref-sector-p4)
add_subdirectory(sc-boxer-96)
add_subdirectory(sc-cavallo-360)
add_subdirectory(sc-fmc-gt4)
add_subdirectory(sc-lynx-220)
add_subdirectory(sc-murasama-nsx)
add_subdirectory(sc-spirit-300)
add_subdirectory(trb1-boxer-trbrs)
add_subdirectory(trb1-cavallo-360rb)
add_subdirectory(trb1-sector-rb1)
add_subdirectory(trb1-silber-rblk)
add_subdirectory(trb1-spirit-rb1lt)
add_subdirectory(trb1-taipan-rb1)
add_subdirectory(trb1-zaxxon-rb)
