install(FILES
aalborg.xml
allondaz.xml
brondehach.xml
bueno.xml
charmey.xml
chemisay.xml
corkscrew.xml
default.xml
espie.xml
e-track-2.xml
e-track-3.xml
e-track-4.xml
forza.xml
genetic-template.xml
goldstone-sand.xml
inuksuk.xml
karwada.xml
lombaro.xml
longday.xml
migrants.xml
ole-road-1.xml
peters.xml
pinabashi.xml
prenzlau.xml
ruudskogen.xml
salty.xml
spring.xml
street-1.xml
wheel-1.xml
    DESTINATION ${datadir}/drivers/simplix/ls1-toro-rgt
)
