install(FILES
aalborg-17.xml
aalborg-34.xml
aalborg-51.xml
aalborg.xml
allondaz-17.xml
allondaz-34.xml
allondaz-51.xml
allondaz.xml
brondehach-17.xml
brondehach-34.xml
brondehach-51.xml
brondehach.xml
bueno-17.xml
bueno-34.xml
bueno-51.xml
bueno.xml
charmey-17.xml
charmey-34.xml
charmey-51.xml
charmey.xml
chemisay-17.xml
chemisay-34.xml
chemisay-51.xml
chemisay.xml
corkscrew-17.xml
corkscrew-34.xml
corkscrew-51.xml
corkscrew.xml
default.xml
espie-17.xml
espie-34.xml
espie-51.xml
espie.xml
e-track-2-17.xml
e-track-2-34.xml
e-track-2-51.xml
e-track-2.xml
e-track-3-17.xml
e-track-3-34.xml
e-track-3-51.xml
e-track-3.xml
e-track-4-17.xml
e-track-4-34.xml
e-track-4-51.xml
e-track-4.xml
forza-17.xml
forza-34.xml
forza-51.xml
forza.xml
genetic-template.xml
goldstone-sand-17.xml
goldstone-sand-34.xml
goldstone-sand-51.xml
goldstone-sand.xml
inuksuk-17.xml
inuksuk-34.xml
inuksuk-51.xml
inuksuk.xml
karwada-17.xml
karwada-34.xml
karwada-51.xml
karwada.xml
lombaro-17.xml
lombaro-34.xml
lombaro-51.xml
lombaro.xml
longday-17.xml
longday-34.xml
longday.xml
migrants-17.xml
migrants-34.xml
migrants-51.xml
migrants.xml
ruudskogen-17.xml
ruudskogen-34.xml
ruudskogen-51.xml
ruudskogen.xml
    DESTINATION ${datadir}/drivers/simplix/sc-lynx-220
)
