install(FILES
aalborg.xml
allondaz.xml
alpine-1.xml
a-speedway.xml
b-speedway.xml
charmey.xml
corkscrew.xml
c-speedway.xml
d-speedway.xml
e-speedway.xml
e-track-2.xml
e-track-3.xml
e-track-4.xml
e-track-6.xml
forza.xml
f-speedway.xml
g-speedway.xml
g-track-2.xml
g-track-3.xml
inuksuk.xml
lombaro.xml
ole-road-1.xml
pinabashi.xml
prenzlau.xml
ruudskogen.xml
spring.xml
street-1.xml
wheel-1.xml
wheel-2.xml
    DESTINATION ${datadir}/drivers/simplix/tracks
)
